﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.3.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
    Added: (before|after)rMountLogsFolder and  (before|after)UnmountLogsFolder events
    Added: Caller info for __DIE__ and __WARN__ signal handlers
    Added: Debug info for loading of listener files (Event::Manager)
    Added: Fallback method for sysvinit scripts that don't provide status command (iMSCP::Provider::Service::Sysvinit)
    Added: 'fixpermissions' option for the iMSCP::Dir::make() method
    Added: iMSCP::Database::mysql::useDatabase() method - Allow to select database on which we want operate on
    Added: iMSCP::DbTasksProcessor - Allows to process db tasks without spawning new process
    Added: imscp master system user (homedir is /var/local/imscp)
    Added: imscp-mountall script - Mount file systems by reading entries from i-MSCP fstab-like file
    Added: iMSCP::Mount library - Library for mounting/unmounting file systems
    Added: iMSCP::OpenSSL::getCertificateExpiryTime() method - Allow to get SSL certificate expiry time (UNIX timestamp)
    Added: onBoot event in iMSCP::Bootstrapper (triggered at end of bootstrapping process)
    Added: Servers::mta::postfix::postconf method() - Allows editing of Postfix main.cf parameters
    Added: Support for PHP 7.0 (httpd servers implementations)
    Added: Support for prime256v1 (ECDSA) keys (iMSCP::OpenSSL)
    Added: Support for systemd socket units (systemd init provider)
    Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached (init providers)
    Enhancement: Allow passing command through arrayref (iMSCP::Execute::execute, iMSCP::Execute::executeNoWait)
    Fixed: composer.phar must not be run with root user privileges (it is now run with i-MSCP system master user)